--- a/www.parliament.gh/da59ce58f677082fcaf869a444f076768b1f3302.yml
+++ b/www.parliament.gh/da59ce58f677082fcaf869a444f076768b1f3302.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:19:12 GMT
+    - Thu, 17 Nov 2016 16:40:25 GMT
     Server:
     - Apache
     X-Powered-By:
@@ -30,18 +30,18 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=4ac8e21bedf8f8c43ff95e93596bc0bd; path=/
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22c5d4b74e703a31f306b354c6cd96d085%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479377952%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D3a5ed145e77d1e4361a7cb4e05024273;
-      expires=Thu, 17-Nov-2016 12:19:12 GMT; path=/
-    - csrf_xmen=fcad2042ad618626bdc5074373de4529; expires=Thu, 17-Nov-2016 12:19:12
+    - PHPSESSID=7e94e65f0adb6b315b89f2a3469595b7; path=/
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%226fd14d47c888f039ff8fc55ba3dd8a9a%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479400826%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D2307ed9522d4cf34c0bd3899308dbeaf;
+      expires=Thu, 17-Nov-2016 18:40:26 GMT; path=/
+    - csrf_xmen=5a9f77a6e4e0053e732013ab2ab77f11; expires=Thu, 17-Nov-2016 18:40:26
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '78143'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:19:12 GMT
+recorded_at: Thu, 17 Nov 2016 16:40:26 GMT
