--- a/www.parliament.gh/cda536fe228669413af31c72c954d7fbcdea738a.yml
+++ b/www.parliament.gh/cda536fe228669413af31c72c954d7fbcdea738a.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:22:36 GMT
+    - Thu, 17 Nov 2016 16:44:24 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2257855660b04a7a50256f10701a5897b9%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479378156%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dfbbbb072e63da02ff6b62488a15abe93;
-      expires=Thu, 17-Nov-2016 12:22:36 GMT; path=/
-    - csrf_xmen=530443ab16bd918b9c4b9988ccce20a0; expires=Thu, 17-Nov-2016 12:22:36
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22a66f285fa32ae19ab3f80dddc7c9add5%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479401064%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D194700356264e27bceca830cff5966d5;
+      expires=Thu, 17-Nov-2016 18:44:24 GMT; path=/
+    - csrf_xmen=00dbca0f544832b660819c7091c49833; expires=Thu, 17-Nov-2016 18:44:24
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16480'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:22:36 GMT
+recorded_at: Thu, 17 Nov 2016 16:44:24 GMT
