--- a/www.parliament.gh/23dd0afcf61b3d43ad70fd99031297b955e80158.yml
+++ b/www.parliament.gh/23dd0afcf61b3d43ad70fd99031297b955e80158.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:22:59 GMT
+    - Thu, 17 Nov 2016 16:44:38 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2209f25f3b4a497896d5da707168d37f99%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479378179%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D7875f12f9e4b769a0b8031c212677e8d;
-      expires=Thu, 17-Nov-2016 12:22:59 GMT; path=/
-    - csrf_xmen=383858ae7d5c7de7bb317255086d47ed; expires=Thu, 17-Nov-2016 12:22:59
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%229fa62159073f595f3adb62b4f22cd1b9%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479401078%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D55563a3ffa13c93c2da912d53dec53dd;
+      expires=Thu, 17-Nov-2016 18:44:38 GMT; path=/
+    - csrf_xmen=5fb4dfdbd665fec8432060dc832d3712; expires=Thu, 17-Nov-2016 18:44:38
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16687'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:22:59 GMT
+recorded_at: Thu, 17 Nov 2016 16:44:39 GMT
