--- a/www.parliament.gh/ffabcf5c42329944ac8de4ad97a6cc6e052c1996.yml
+++ b/www.parliament.gh/ffabcf5c42329944ac8de4ad97a6cc6e052c1996.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:24:07 GMT
+    - Thu, 17 Nov 2016 16:45:41 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%220a4cd5c6f304093336e5a1696cd32f95%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479378247%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D76ab426d33e57658f9acab7190746a28;
-      expires=Thu, 17-Nov-2016 12:24:07 GMT; path=/
-    - csrf_xmen=221858ffa3525ea66573d84a6c65426a; expires=Thu, 17-Nov-2016 12:24:07
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22dfbcd4868fafaecd7ef31d2aab4a6db6%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479401141%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7De4890004c24371e3df5a395576591ff8;
+      expires=Thu, 17-Nov-2016 18:45:41 GMT; path=/
+    - csrf_xmen=0c442be5cb00833a48cc5765020edb6f; expires=Thu, 17-Nov-2016 18:45:41
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16450'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:24:07 GMT
+recorded_at: Thu, 17 Nov 2016 16:45:42 GMT
