--- a/www.parliament.gh/ba7a06bc80c653d675e1e16722603c7ad3773851.yml
+++ b/www.parliament.gh/ba7a06bc80c653d675e1e16722603c7ad3773851.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:24:50 GMT
+    - Thu, 17 Nov 2016 16:46:17 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22cacf9f77a0b1a1ce6446971eb6d14764%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479378290%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D3a02935ceea8900f0d3958c3ac30004e;
-      expires=Thu, 17-Nov-2016 12:24:50 GMT; path=/
-    - csrf_xmen=b391e22b6db861f7fffdb883fb12e62b; expires=Thu, 17-Nov-2016 12:24:50
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22db9826d163bab52117d31bff652a65c0%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479401177%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D9453d5825964e86cb4c2baee6ec449b7;
+      expires=Thu, 17-Nov-2016 18:46:17 GMT; path=/
+    - csrf_xmen=a822ff9d72ce0b72a9beae4dc7f3f984; expires=Thu, 17-Nov-2016 18:46:17
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16467'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:24:50 GMT
+recorded_at: Thu, 17 Nov 2016 16:46:17 GMT
