--- a/www.parliament.gh/8aaf98710eb863f47ec3dc18a3a75e366fffd8c8.yml
+++ b/www.parliament.gh/8aaf98710eb863f47ec3dc18a3a75e366fffd8c8.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:25:12 GMT
+    - Thu, 17 Nov 2016 16:46:50 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22e2d187eb05e4b5643910f95017ae279e%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479378312%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D99199ca30d3af71c43fb31228517e1cc;
-      expires=Thu, 17-Nov-2016 12:25:12 GMT; path=/
-    - csrf_xmen=223c79f3bb3696ddee7b5f45adb8ce1c; expires=Thu, 17-Nov-2016 12:25:12
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22b67c89a765c5015fc9cfaf8522a57139%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479401210%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7De53b89a7709ed37ab7eabe66e923e41e;
+      expires=Thu, 17-Nov-2016 18:46:50 GMT; path=/
+    - csrf_xmen=b70a3ce35ef05a6a77182981cc8b57e6; expires=Thu, 17-Nov-2016 18:46:50
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16538'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:25:12 GMT
+recorded_at: Thu, 17 Nov 2016 16:46:50 GMT
