--- a/www.parliament.gh/326e7433b7f8a1a9f7fb700f8f01aef68e2bca17.yml
+++ b/www.parliament.gh/326e7433b7f8a1a9f7fb700f8f01aef68e2bca17.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:25:34 GMT
+    - Thu, 17 Nov 2016 16:47:26 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2229e96afa89bc38c29511383d9f5d458c%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479378334%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dd13fd85036d599d62857b4a8d809df74;
-      expires=Thu, 17-Nov-2016 12:25:34 GMT; path=/
-    - csrf_xmen=4d4bb6351338ecf6e4626a3f02dfcbfb; expires=Thu, 17-Nov-2016 12:25:34
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22ab213324f3bb3d6c0ac0143fa243844f%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479401246%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D2d727675ba029e20ad080b3a64d656c4;
+      expires=Thu, 17-Nov-2016 18:47:26 GMT; path=/
+    - csrf_xmen=8d85d78890749b3a81e266bc90f482db; expires=Thu, 17-Nov-2016 18:47:26
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16677'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:25:35 GMT
+recorded_at: Thu, 17 Nov 2016 16:47:26 GMT
