--- a/www.parliament.gh/21b2be0caa04309a0be6bce7deb212960d7d96dd.yml
+++ b/www.parliament.gh/21b2be0caa04309a0be6bce7deb212960d7d96dd.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:28:58 GMT
+    - Thu, 17 Nov 2016 16:48:50 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%225603447d8bfff67d324b433ec3b40451%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479378538%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D9169c233be157a5a60faef673c565e76;
-      expires=Thu, 17-Nov-2016 12:28:58 GMT; path=/
-    - csrf_xmen=eef11821556a399ce06125be5afc915f; expires=Thu, 17-Nov-2016 12:28:58
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22a8b91af74180614092e84e15af7a9688%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479401330%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D9245ddfa4a6351028540a5385a3ddc1c;
+      expires=Thu, 17-Nov-2016 18:48:50 GMT; path=/
+    - csrf_xmen=a789b4befdabac40c53f67fd22a92f7b; expires=Thu, 17-Nov-2016 18:48:50
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16364'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:28:58 GMT
+recorded_at: Thu, 17 Nov 2016 16:48:50 GMT
