--- a/www.parliament.gh/ea1dbf7c58ae1b01ecb6796c2d69a8def56bbde3.yml
+++ b/www.parliament.gh/ea1dbf7c58ae1b01ecb6796c2d69a8def56bbde3.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:29:20 GMT
+    - Thu, 17 Nov 2016 16:49:23 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22471296cfa7d378f589929b19a72c0791%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479378560%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dfa0d25ce3e6a396cfbf38ec7de0db4f7;
-      expires=Thu, 17-Nov-2016 12:29:20 GMT; path=/
-    - csrf_xmen=d26000b9c761cb0f72f47d0d2b9498d8; expires=Thu, 17-Nov-2016 12:29:20
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22f9386dbf0edc49e6a97694d20f94f301%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479401363%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D2dbc0fabf44beac6eeba213974908f54;
+      expires=Thu, 17-Nov-2016 18:49:23 GMT; path=/
+    - csrf_xmen=57f8b8f4efe03902b88b9eda3c99db9c; expires=Thu, 17-Nov-2016 18:49:23
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16474'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:29:21 GMT
+recorded_at: Thu, 17 Nov 2016 16:49:24 GMT
