--- a/www.parliament.gh/0ef7af54d49f9de1f54fa664221f06b95614403a.yml
+++ b/www.parliament.gh/0ef7af54d49f9de1f54fa664221f06b95614403a.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:24:25 GMT
+    - Thu, 17 Nov 2016 18:04:19 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2228fb8b243af61f0db32520f35318d8b6%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479381865%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D37fcb1db2479607dcd97cec906e73ace;
-      expires=Thu, 17-Nov-2016 13:24:25 GMT; path=/
-    - csrf_xmen=74c8bbeed2022f477918f5547d47ac1f; expires=Thu, 17-Nov-2016 13:24:25
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%227168a7391e5a7a59f210e259ae37964c%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479405859%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7De1fcb97631c7be11653a69c4cb4d1739;
+      expires=Thu, 17-Nov-2016 20:04:19 GMT; path=/
+    - csrf_xmen=104f78416789c47c2fa204b75b6ba8f3; expires=Thu, 17-Nov-2016 20:04:19
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16520'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:24:25 GMT
+recorded_at: Thu, 17 Nov 2016 18:04:19 GMT
