--- a/www.parliament.gh/b530f1782de5ed11e5fa0311c984cc6d8acc81a8.yml
+++ b/www.parliament.gh/b530f1782de5ed11e5fa0311c984cc6d8acc81a8.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:24:51 GMT
+    - Thu, 17 Nov 2016 18:04:36 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%229c9c7d22d9cea68fe0d49d737d45afae%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479381891%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Da6e7744213b23a49c2c232a26fdaff9c;
-      expires=Thu, 17-Nov-2016 13:24:51 GMT; path=/
-    - csrf_xmen=d27a1e21f6ca76c48248d3fc811519c9; expires=Thu, 17-Nov-2016 13:24:51
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22475ccaa17bc59152cf2c63288afb11e2%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479405876%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Da071b49b63e531791936d68d02869fbe;
+      expires=Thu, 17-Nov-2016 20:04:36 GMT; path=/
+    - csrf_xmen=0aaefcbefcc3d206ab0ca71b45442ca0; expires=Thu, 17-Nov-2016 20:04:36
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16547'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:24:51 GMT
+recorded_at: Thu, 17 Nov 2016 18:04:37 GMT
