--- a/www.parliament.gh/e11b2c984ba4c6462a086eac9e4d6fdcd79baf4a.yml
+++ b/www.parliament.gh/e11b2c984ba4c6462a086eac9e4d6fdcd79baf4a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:22:36 GMT
+    - Thu, 17 Nov 2016 18:05:05 GMT
     Server:
     - Apache
     X-Powered-By:
@@ -30,18 +30,18 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=0cfac3a01ef81a6d54db37c45be9cb14; path=/
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22f27cc49041b1d89af4b8d419cdedc778%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479381756%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Db6cfc379f1aac7bc819bd85726e8c34e;
-      expires=Thu, 17-Nov-2016 13:22:36 GMT; path=/
-    - csrf_xmen=258695f9ac6ffa92e5873b96f9d2476b; expires=Thu, 17-Nov-2016 13:22:36
+    - PHPSESSID=38d733677dc43a621c386585ddccef2d; path=/
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22bcf0ac03b04a78ed6e7693b24ffc452e%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479405905%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dffbdb241ce744c43861385567408ef17;
+      expires=Thu, 17-Nov-2016 20:05:05 GMT; path=/
+    - csrf_xmen=b1f67ca8b7a6e17cee80ff261407e6e8; expires=Thu, 17-Nov-2016 20:05:05
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '78024'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:22:36 GMT
+recorded_at: Thu, 17 Nov 2016 18:05:05 GMT
