--- a/www.parliament.gh/6b7dc9adb1835768f1700af5f4179d3fa892649d.yml
+++ b/www.parliament.gh/6b7dc9adb1835768f1700af5f4179d3fa892649d.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:25:08 GMT
+    - Thu, 17 Nov 2016 18:08:17 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%224fee825047ef9cd40722ed6e9a00b737%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479381908%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dbbb26d1b056920150652ba39c326c8d3;
-      expires=Thu, 17-Nov-2016 13:25:08 GMT; path=/
-    - csrf_xmen=fe39fb6cb6d22da64a43587519ebdc15; expires=Thu, 17-Nov-2016 13:25:08
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22fef062f820857e634a403f372a48ee2c%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479406097%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Ddd3b130f8ad5848e28aae02ed6c14b53;
+      expires=Thu, 17-Nov-2016 20:08:17 GMT; path=/
+    - csrf_xmen=1c2230ecfd5bdcce55af9de71baf3f20; expires=Thu, 17-Nov-2016 20:08:17
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16762'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:25:08 GMT
+recorded_at: Thu, 17 Nov 2016 18:08:17 GMT
