--- a/www.parliament.gh/9022b249098ff8216cfa0e876b4687b64a09069d.yml
+++ b/www.parliament.gh/9022b249098ff8216cfa0e876b4687b64a09069d.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:25:42 GMT
+    - Thu, 17 Nov 2016 18:09:05 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22e6944bd254525c1ab4bb388a77a92646%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479381942%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D2b4ebfb2ca6eb76e242c82305ba7d2e0;
-      expires=Thu, 17-Nov-2016 13:25:42 GMT; path=/
-    - csrf_xmen=2eb54f459fe3eb8233ccd3349f3a3046; expires=Thu, 17-Nov-2016 13:25:42
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%220bcf18f66888d0a49dae44508b0c8647%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479406145%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D05061349f8804f551e3cea1a6a917932;
+      expires=Thu, 17-Nov-2016 20:09:05 GMT; path=/
+    - csrf_xmen=f18e5e275affd36339a029bb50fd8dae; expires=Thu, 17-Nov-2016 20:09:05
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16562'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:25:42 GMT
+recorded_at: Thu, 17 Nov 2016 18:09:05 GMT
