--- a/www.parliament.gh/9d8ce4c3933ee6f465ba82a80d5b8896d65bd618.yml
+++ b/www.parliament.gh/9d8ce4c3933ee6f465ba82a80d5b8896d65bd618.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:43:46 GMT
+    - Thu, 17 Nov 2016 18:35:27 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2249d37c444fa463c50ead1e246f82b0d2%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479383026%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D36d80fca29a4853df1ec2568bb52cc1b;
-      expires=Thu, 17-Nov-2016 13:43:46 GMT; path=/
-    - csrf_xmen=24836321a9ee2ddcc7efe2d9b51b3292; expires=Thu, 17-Nov-2016 13:43:46
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22fab2517d228efa204fb83662f0cdc9b7%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479407727%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Da824ea0f609f332ce34a0691d2d7d116;
+      expires=Thu, 17-Nov-2016 20:35:27 GMT; path=/
+    - csrf_xmen=e614ac7f025c1eb61f2771f0b3d89682; expires=Thu, 17-Nov-2016 20:35:27
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16458'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:43:46 GMT
+recorded_at: Thu, 17 Nov 2016 18:35:27 GMT
