--- a/www.parliament.gh/bd32fff9c1a37ffee5f247549b629ab703952337.yml
+++ b/www.parliament.gh/bd32fff9c1a37ffee5f247549b629ab703952337.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:44:19 GMT
+    - Thu, 17 Nov 2016 18:36:20 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22ea93cd68c9182a0cff361761cf5bd548%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479383059%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D860ebb7cc145ed80ffc6a3c1de360a3c;
-      expires=Thu, 17-Nov-2016 13:44:19 GMT; path=/
-    - csrf_xmen=24fc2d43b446d32ab1377788d1f532f6; expires=Thu, 17-Nov-2016 13:44:19
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22b2bbf6d00e78a482f6624904acee0f98%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479407780%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D8af4373d09d05db484665337764f2a8a;
+      expires=Thu, 17-Nov-2016 20:36:20 GMT; path=/
+    - csrf_xmen=d77673a7d5f9800abbf9a99ec34aee2c; expires=Thu, 17-Nov-2016 20:36:20
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16540'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:44:20 GMT
+recorded_at: Thu, 17 Nov 2016 18:36:21 GMT
