--- a/www.parliament.gh/99a8d9bd95bf8cb96f1d1bf85d416eb04a1042f7.yml
+++ b/www.parliament.gh/99a8d9bd95bf8cb96f1d1bf85d416eb04a1042f7.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:44:44 GMT
+    - Thu, 17 Nov 2016 18:36:40 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22353c4e823c95ae00e7c25f9a0ebf4905%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479383085%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dfc0a69fd266247276f2752a1ca9330a9;
-      expires=Thu, 17-Nov-2016 13:44:45 GMT; path=/
-    - csrf_xmen=6076e62caa3efcffaad11502a190b5d0; expires=Thu, 17-Nov-2016 13:44:45
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%222f68217fc5d144909aa2447a6dde09c8%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479407800%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D10ab26caddd894938a75ec7d25a02fbc;
+      expires=Thu, 17-Nov-2016 20:36:40 GMT; path=/
+    - csrf_xmen=dde5a1cf87dfd15701915a2cb26d74c6; expires=Thu, 17-Nov-2016 20:36:40
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16503'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:44:45 GMT
+recorded_at: Thu, 17 Nov 2016 18:36:41 GMT
