--- a/www.parliament.gh/5e602902beb6267eb09a7279f94baddb92d4f73c.yml
+++ b/www.parliament.gh/5e602902beb6267eb09a7279f94baddb92d4f73c.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:45:56 GMT
+    - Thu, 17 Nov 2016 18:38:11 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22e0da80b8f6e9972e87656d6bbb2a835d%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479383156%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Df83876c2d866c8376e6f57db1832fde0;
-      expires=Thu, 17-Nov-2016 13:45:56 GMT; path=/
-    - csrf_xmen=6d3b2952c65e7ee77d0997ba55dac7c4; expires=Thu, 17-Nov-2016 13:45:56
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22c641afd3ad9f67dc00b5fd3088f2e980%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479407891%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7De840ea994fada38d91323c0cefb0870f;
+      expires=Thu, 17-Nov-2016 20:38:11 GMT; path=/
+    - csrf_xmen=887c37ebbddf836bcf1fd03c3aeb8b17; expires=Thu, 17-Nov-2016 20:38:11
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16444'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:45:57 GMT
+recorded_at: Thu, 17 Nov 2016 18:38:11 GMT
