--- a/www.parliament.gh/ba32fca86b80db44dd57cb22ae48f9f07f06b543.yml
+++ b/www.parliament.gh/ba32fca86b80db44dd57cb22ae48f9f07f06b543.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:48:39 GMT
+    - Thu, 17 Nov 2016 18:38:30 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2211a49fc7c3e961c146a714adc3232a4c%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479383319%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dce76946148226bb47a96c814a9a3723e;
-      expires=Thu, 17-Nov-2016 13:48:39 GMT; path=/
-    - csrf_xmen=d8ad13fa8d7feb1d78f67ab0c84f11d1; expires=Thu, 17-Nov-2016 13:48:39
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22e3e6901a96324829613c08eca186b674%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479407910%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D340c5c9655231b4808d7b40845136587;
+      expires=Thu, 17-Nov-2016 20:38:30 GMT; path=/
+    - csrf_xmen=f0d113cbb7ed104d9bf88c2c10c3652c; expires=Thu, 17-Nov-2016 20:38:30
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16646'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:48:39 GMT
+recorded_at: Thu, 17 Nov 2016 18:38:30 GMT
