--- a/www.parliament.gh/850aeebdd53e61c7802158827067be08d4d0567a.yml
+++ b/www.parliament.gh/850aeebdd53e61c7802158827067be08d4d0567a.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:48:54 GMT
+    - Thu, 17 Nov 2016 18:39:05 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22e68c4d2f7ad756b73a542ce70e107fe5%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479383334%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D859a76d8a5399e22b793465fafd4b1bf;
-      expires=Thu, 17-Nov-2016 13:48:54 GMT; path=/
-    - csrf_xmen=4ea2a5a71070f5f65292260e8ade50f8; expires=Thu, 17-Nov-2016 13:48:54
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22511672157f3705d18a7808c677239fc1%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479407945%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D32bc0bc07c28f501c1f12ed01a637a56;
+      expires=Thu, 17-Nov-2016 20:39:05 GMT; path=/
+    - csrf_xmen=b6d8b7c208b8072c3be50fc83a166bc6; expires=Thu, 17-Nov-2016 20:39:05
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16499'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:48:54 GMT
+recorded_at: Thu, 17 Nov 2016 18:39:05 GMT
