--- a/www.parliament.gh/1e1e1bdc95f68566a8a2f03417db570dc1b653c7.yml
+++ b/www.parliament.gh/1e1e1bdc95f68566a8a2f03417db570dc1b653c7.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:49:12 GMT
+    - Thu, 17 Nov 2016 18:39:38 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%225ab071854c065b3872b933b1f1b976ea%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479383352%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D24b9d1b28c401bed1b39615d9198ad83;
-      expires=Thu, 17-Nov-2016 13:49:12 GMT; path=/
-    - csrf_xmen=6c3ddaf87d1c33d0e9d30a55fc8b9315; expires=Thu, 17-Nov-2016 13:49:12
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2287b30bd9e41c7da9f361a0ea4eb2e31e%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479407978%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D0b96edfe583d9b4e75ad1731f240d64f;
+      expires=Thu, 17-Nov-2016 20:39:38 GMT; path=/
+    - csrf_xmen=98279a65f89b8459ff6d9348aac6ebd4; expires=Thu, 17-Nov-2016 20:39:38
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16816'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:49:13 GMT
+recorded_at: Thu, 17 Nov 2016 18:39:38 GMT
