--- a/www.parliament.gh/96fc634cf6c02b22dd0b072523a22f02705a76da.yml
+++ b/www.parliament.gh/96fc634cf6c02b22dd0b072523a22f02705a76da.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:49:43 GMT
+    - Thu, 17 Nov 2016 18:40:34 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22910f8378b76f397fa7c7a3e8311c9a32%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479383383%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dd29153bd707a485c7660194924c8f60d;
-      expires=Thu, 17-Nov-2016 13:49:43 GMT; path=/
-    - csrf_xmen=31852621e2ae068271318e01e602cf82; expires=Thu, 17-Nov-2016 13:49:43
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%225ff0117e937d8e4afaac4a2d0004f3b7%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479408035%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D747803a17f1b12266f3c01b9dbd701f4;
+      expires=Thu, 17-Nov-2016 20:40:35 GMT; path=/
+    - csrf_xmen=1e8cfa672be469710f9e732e2613e423; expires=Thu, 17-Nov-2016 20:40:35
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16749'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:49:44 GMT
+recorded_at: Thu, 17 Nov 2016 18:40:35 GMT
