--- a/www.parliament.gh/0338a189866835e809bf5063202d0f47dca596d8.yml
+++ b/www.parliament.gh/0338a189866835e809bf5063202d0f47dca596d8.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:49:59 GMT
+    - Thu, 17 Nov 2016 18:41:01 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%221690b28440bec56edb68f9cd67a577a1%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479383399%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D4e4f742d062911d712dd0b007efcf2c2;
-      expires=Thu, 17-Nov-2016 13:49:59 GMT; path=/
-    - csrf_xmen=c9e8f1ff03a773abefd22a13c35a686d; expires=Thu, 17-Nov-2016 13:49:59
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%223436c11b30488976c349ffe1fa7d884e%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479408061%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dfe037b5c83cfeab42ba8880d0fac6ccc;
+      expires=Thu, 17-Nov-2016 20:41:01 GMT; path=/
+    - csrf_xmen=75748e47cf8eabf053abb4bdcca33cd3; expires=Thu, 17-Nov-2016 20:41:01
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16553'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:49:59 GMT
+recorded_at: Thu, 17 Nov 2016 18:41:02 GMT
